--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.3",
+    "react-native-date-picker": "^5.0.8",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
@@ -47,7 +48,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-settings-components": "^0.0.2",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
