--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@expo/vector-icons": "^14.0.2",
     "@faker-js/faker": "^9.3.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.47.8",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.6",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
@@ -49,7 +51,7 @@
     "react-native-settings-components": "^0.0.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
