--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-settings-components": "^0.0.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "react-select": "^5.9.0"
+    "react-select": "^5.9.0",
+    "expo-calendar": "~14.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
