--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.6",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
+    "expo-calendar": "~14.0.5",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -51,8 +52,7 @@
     "react-native-settings-components": "^0.0.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "react-select": "^5.9.0",
-    "expo-calendar": "~14.0.5"
+    "react-select": "^5.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
