Adds new hosting URL to readme

--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,8 @@
     "preview": {
       "ios": {
         "simulator": true
-      }
+      },
+      "channel": "preview"
     },
     "production": {
       "autoIncrement": true,
